<resources>
    <string name="app_name">Meraki</string>
    <string name="app_name_nav">MERAKI</string>
    <string name="title_activity_main">Paln</string>
    <string name="title_activity_manage_task">ManageTaskActivity</string>

    <!-- Titles -->
    <string name="main_view">Plan</string>
    <string name="add_task_view">Add Task</string>
    <string name="edit_task_view">Edit Task</string>
    <string name="map_view">Map</string>
    <string name="login_view">Login</string>
    <string name="category_view">Categories</string>
    <string name="about_view">About</string>
    <string name="add_category_view">Add Category</string>
    <string name="edit_category_view">Edit Category</string>

    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_map">Map</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_about">About</string>
    <string name="nav_archive">Archive</string>
    <string name="nav_signout">Sign Out</string>

    <!-- Categories -->
    <string name="grid_category">Category</string>
    <string name="grid_number">Number of Tasks</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_user_name">Name</string>
    <string name="nav_user_email">example@gmail.com</string>
    <string name="nav_subtitle">Management</string>

    <!-- Menus -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_edit">Edit name</string>
    <string name="action_delete">Delete</string>

    <!-- About -->
    <string name="about_description">Meraki is a word that modern Greeks often use to describe doing something with soul, creativity, or love - when you put “something of yourself” into what you’re doing, whatever it may be.
        \n\nThis app was developed for the Object Oriented Programming Lab class of the Master in Informatics and Computer Engineering at the Faculty of Engineering of the University of Porto. </string>

    <!-- Manage Task -->
    <string name="add_hint">I want to...</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="when_label">When</string>
    <string name="category_label">Category</string>
    <string name="location_label">Location</string>
    <string name="archive_label">Archive</string>
    <string name="task_label">Task</string>
    <string-array name="date_array">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Upcoming</item>
        <item>Someday</item>
    </string-array>

    <!-- Manage Category -->
    <string name="category_hint">Category</string>

    <!-- Tasks by Category -->
    <string name="title_activity_category_tasks">CategoryTasksActivity</string>
    <string name="title_activity_manage_category">ManageCategoryActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_select_location">Select Location</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="google_button">Google</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmation">Password Confirmation</string>
    <string name="prompt_name">Name</string>
    <string name="action_register">Register</string>
    <string name="action_signin">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_mismatch">This password does not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_account">Account</string>
    <string name="title_preferences">Preferences</string>
    <string name="button_profile">Upload profile picture</string>
    <string name="button_name">Edit name</string>
    <string name="button_email">Edit email</string>
    <string name="button_password">Reset password</string>
    <string name="button_delete_account">Delete account</string>
    <string name="button_display_content">Content information</string>
    <string name="button_clear_archived">Clear archive</string>
    <string name="option_ok">Ok</string>
    <string name="dialog_content">Content Information</string>

    <!-- Strings related to account management -->
    <string name="dialog_edit_name">Edit Name</string>
    <string name="dialog_edit_email">Edit Email</string>
    <string name="dialog_reset_password">Reset Password</string>
    <string name="delete_account_question">You are about to delete this account, all data will be lost.\nDo you want to continue? </string>
    <string name="option_sure">Sure</string>
    <string name="option_cancel">Cancel</string>
    <string name="option_save">Save</string>
    <string name="clean_completed_question">Archived tasks will be deleted.\nDo you want to continue?</string>
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="title_activity_archive">ArchiveActivity</string>

</resources>
