<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_globe"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_widgets"
            android:title="@string/nav_categories" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/nav_about" />
    </group>

    <item android:title="@string/nav_subtitle">
        <menu>
            <item
                android:id="@+id/nav_archive"
                android:icon="@drawable/ic_menu_library"
                android:title="@string/nav_archive" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_menu_power"
                android:title="@string/nav_signout" />
        </menu>
    </item>

</menu>
