<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dots"
        android:icon="@drawable/ic_menu_dots"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_refresh"
                android:icon="@drawable/ic_menu_refresh"
                android:title="@string/action_refresh" />

            <item
                android:id="@+id/action_edit"
                android:icon="@drawable/ic_menu_edit"
                android:title="@string/action_edit" />

            <item
                android:id="@+id/action_delete"
                android:icon="@drawable/ic_menu_delete"
                android:title="@string/action_delete" />

            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings" />

        </menu>

    </item>

</menu>