<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.damon.merakiapp.view.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <TextView
        android:id="@+id/settings_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/title_account"
        android:textAlignment="viewStart"
        android:textColor="@color/colorGrey"
        android:textSize="18sp" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorGrey"
        android:gravity="start" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/button_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="@string/button_profile"
            android:textAllCaps="false"
            android:textColor="@color/colorGrey" />

        <Button
            android:id="@+id/button_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="@string/button_name"
            android:textAllCaps="false"
            android:textColor="@color/colorGrey" />

        <Button
            android:id="@+id/button_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="@string/button_email"
            android:textAllCaps="false"
            android:textColor="@color/colorGrey" />

        <Button
            android:id="@+id/button_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="@string/button_password"
            android:textAllCaps="false"
            android:textColor="@color/colorGrey" />

        <Button
            android:id="@+id/button_delete_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="@string/button_delete_account"
            android:textAllCaps="false"
            android:textColor="@color/colorGrey" />

    </LinearLayout>


    <TextView
        android:id="@+id/settings_preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/title_preferences"
        android:textAlignment="viewStart"
        android:textColor="@color/colorGrey"
        android:textSize="18sp" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorGrey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/button_display_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="@string/button_display_content"
            android:textAllCaps="false"
            android:textColor="@color/colorGrey" />

        <Button
            android:id="@+id/button_clean_archived"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="@string/button_clear_archived"
            android:textAllCaps="false"
            android:textColor="@color/colorGrey" />

    </LinearLayout>
</LinearLayout>
