<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.damon.merakiapp.view.ManageTaskActivity"
    tools:showIn="@layout/activity_manage_task">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingTop="16dp">

            <EditText
                android:id="@+id/input_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/task_label"
                android:inputType="text"
                android:labelFor="@+id/task_Input"
                android:paddingBottom="12dp" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/choose_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/when_label"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/date_spinner"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/choose_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/category_label"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/select_location_button"
            style="?android:buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/location_label"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/archive_button"
            style="?android:buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@color/colorWhite"
            android:text="@string/archive_label"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/buttonDelete"
            style="?android:buttonBarButtonStyle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/transparent"
            android:text="@string/delete_button"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp" />

        <Button
            android:id="@+id/buttonSave"
            style="?android:buttonBarButtonStyle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/transparent"
            android:text="@string/save_button"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp" />

    </LinearLayout>

</LinearLayout>