<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="165dp"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/navigationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:fontFamily="serif"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/app_name_nav"
        android:textAlignment="viewStart"
        android:textColor="@color/colorNavigation"
        android:textSize="24sp" />

    <View
        android:id="@+id/viewTop"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="80dp"
        android:background="@color/colorNavigation" />

    <View
        android:id="@+id/viewBottom"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="155dp"
        android:background="@color/colorNavigation" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/userEmail"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp"
        android:layout_marginStart="90dp"
        android:text="@string/nav_user_name"
        android:textColor="@color/colorStatusBar"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/userName"
        android:layout_marginBottom="23dp"
        android:text="@string/nav_user_email"
        android:textColor="@color/colorStatusBar"
        android:textSize="13sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/nav_profile_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/userEmail"
        android:layout_alignTop="@+id/userName"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_profile" />

</RelativeLayout>
