<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.damon.merakiapp.view.LoginFragment">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:paddingTop="10dp">

                    <EditText
                        android:id="@+id/login_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/prompt_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:paddingBottom="12dp" />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:paddingTop="10dp">

                    <AutoCompleteTextView
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/prompt_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingBottom="12dp" />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:paddingTop="10dp">

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingBottom="12dp" />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:paddingTop="10dp">

                    <EditText
                        android:id="@+id/login_password_confirmation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/prompt_password_confirmation"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingBottom="12dp" />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <Button
                    android:id="@+id/login_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorAccent"
                    android:text="@string/action_signin"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
